<resources>
    <string name="app_name">Illuminty</string>
    <string name="login_illuminaties_chats">Login illuminaties Chats</string>
    <string name="enter_you_user_name_email">Enter you User name / Email</string>
    <string name="enter_you_pin">Enter you pin</string>
    <string name="user_name_mail">User Name / Mail</string>
    <string name="logo">LOGO</string>
    <string name="user_name_email" translatable="false">"   User Name / Email"</string>
    <string name="pin_hint">"   ****"</string>
    <string name="illuminaties_chats">illuminaties Chats</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="entry_page_image">Entry page image</string>
    <string name="top_logo">top logo</string>
    <string name="name_email">"  Name/email"</string>
    <string name="reenter_you_pin">"  ReEnter you Pin"</string>
    <string name="re_enter_pin">Re-Enter Pin</string>
    <string name="sginup_illuminaties_chats">Sginup illuminaties Chats</string>
    <string name="todo">TODO</string>
    <string name="your_user_name_email">Enter you User name / Email</string>
    <string name="signup_enter_you_pin">Enter you Pin</string>
    <string name="signenter_you_pin">"  enter_you_pin"</string>
</resources>