<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <EditText
        android:id="@+id/editTextNumberPassword"
        android:layout_width="268dp"
        android:layout_height="39dp"
        android:autofillHints=""
        android:hint="enter_you_pin"
        android:ems="10"
        android:background="@drawable/edt_background"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        tools:layout_editor_absoluteY="480dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_enter_you_pin"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextNumberPassword" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="266dp"
        android:layout_height="42dp"
        android:autofillHints=""
        android:hint="@string/name_email"
        android:ems="10"
        android:inputType="text"
        android:background="@drawable/edt_background"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        tools:layout_editor_absoluteY="409dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_user_name_email"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintStart_toStartOf="@+id/editTextText" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="295dp"
        android:layout_height="287dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteY="50dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/sginup_illuminaties_chats"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        tools:layout_editor_absoluteY="325dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="269dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:hint="@string/reenter_you_pin"
        android:ems="10"
        android:background="@drawable/edt_background"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumberPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextNumberPassword"
        tools:layout_editor_absoluteY="547dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/re_enter_pin"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>